<resources>
    <string name="app_name">beneFIT</string>
    <string name="app_motto">Train like you mean it</string>
    <string name="get_started_begin">Begin your journey</string>
    <string name="get_started_btn">Get started</string>
    <string name="choose_goals_title">Choose a goal</string>
    <string name="choose_goals_desc">Start your journey with a clear goal that you are aiming to achieve</string>
    <string name="setup_profile_title">Set up your profile</string>
    <string name="setup_profile_desc">Just a few more details..</string>
    <string name="setup_profile_lbl_age">What\'s your age?</string>
    <string name="setup_profile_lbl_height">What\'s your height?</string>
    <string name="setup_profile_lbl_weight">What\'s your weight?</string>
    <string name="setup_profile_lbl_lifestyle">What\'s your lifestyle?</string>
    <string name="setup_profile_lifestyle_1">Sedentary</string>
    <string name="setup_profile_lifestyle_2">Moderate</string>
    <string name="setup_profile_lifestyle_3">Active</string>
    <string name="setup_profile_lifestyle_4">Very Active</string>
    <string name="login_label">Login to your account</string>
    <string name="login_desc">You can login through your Benefit account or through Google+ or Facebook</string>
    <string name="signup_lbl">Create a new account</string>
    <string name="signup_desc">Enter your details to create a new Benefit account</string>
    <string name="signle_workou_lbl">Create a new account</string>
    <string name="signle_workou_desc">A specialized workout designed to make sure that you hit all muscles with high intensity.</string>

    <string name="lbl_continue">Continue</string>
    <string name="lbl_next">Next</string>
    <string name="lbl_back">Go Back</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_intensity">Intensity -</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_female">Female</string>
    <string name="lbl_feet">Ft</string>
    <string name="lbl_cms">Cm</string>
    <string name="lbl_kilograms">Kg</string>
    <string name="lbl_pounds">Lbs</string>
    <string name="lbl_fb_login">Log in with facebook</string>
    <string name="lbl_google_login">Sign in with google</string>
    <string name="lbl_email">Email Address</string>
    <string name="lbl_username">Username</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_invalid">Invalid</string>
    <string name="lbl_incorrect">Incorrect</string>
    <string name="lbl_forget_pass">Forgot password?</string>
    <string name="lbl_signup">Sign Up</string>
    <string name="lbl_pass_short_warning">atleast 8 characters</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="alert_discard_activity">Are you sure you want to discard this activity?</string>
    <string name="alert_get_back_shortly">Thank you for reaching out to us. We will get back to you shortly.</string>
    <string name="alert_get_chat_plan">Chat is a paid feature, Get a coach add a personalized plans to chat now.</string>

    <string name="facebook_app_id">715649728825438</string>
    <string name="fb_login_protocol_scheme">fb715649728825438</string>

    <string name="server_client_id">352356064520-t1o0oplr8ij3v4tk9hi8f43siqee95sg.apps.googleusercontent.com</string>
    <string name="bmi_underweight">UNDERWEIGHT</string>
    <string name="bmi_underweight_details"><![CDATA[Advise - Eat nutrient dense Food & strengthen your muscles]]></string>
    <string name="bmi_overweight">OVERWEIGHT</string>
    <string name="bmi_overweight_details">Advise - Make healthy Food choices and participate in regular physical activity to be more fit and in shape.</string>
    <string name="bmi_obesity">OBESITY</string>
    <string name="bmi_obesity_details">Advise - Increase physical activity and improve diet.  D. Range 30.0 and above Advise - Shed some weight down, limit your calorie intake, Exercise regular and improve your metabolism.</string>

    <string name="description">Media Controls</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button">LOGIN</string>
    <string name="protien_facts_text">In the present times, a lot of attention is being paid to proteins and their health value. Proteins not only regulate the metabolic rate and thus help in weight management. They also have a number of other health benefits. This article seeks to answer questions about the structure and the uses of protein, and seek out the easily available sources of protein. Proteins are comprised of smaller molecules of amino acids. Proteins with 20 molecules of amino acids are called complete proteins, and such foods are enough to fulfill all amino acid requirements of the body. They provide the body with energy. There are roughly 4 calories in each gram of protein. Essential proteins are proteins that are not produced in the body and thus have to be included in the diet. The ratio of body weight to the amount of protein one must eat is roughly 7 grams to 20 pounds. Nutritionists are also of the opinion that 30 per cent of the total calories one takes, should come from protein. Proteins are used by the body to provide structure and support to cells, help replace old or damaged cells, and control electrochemical reactions. They also strengthen the immune system and thus protect the body from diseases.</string>
    <string name="kg">Kg</string>
    <string name="lbs">LBS</string>
    <string name="whats_s_your_weight">Whats\'s your weight</string>
</resources>
