<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGrey">

    <LinearLayout
        android:id="@+id/get_started_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/colorLightGrey"
        android:layout_centerVertical="true">

        <TextView
            android:id="@+id/get_started_signup_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/signup_lbl"
            android:textAllCaps="true"
            android:fontFamily="@font/oswald"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@color/colorPrimary"
            android:textAlignment="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:fontFamily="@font/proxima_nova"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:text="@string/signup_desc"
            android:textSize="16sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/proxima_nova"
                android:textColor="@color/colorPrimary"
                android:text="@string/lbl_email"/>

            <TextView
                android:id="@+id/get_started_signup_email_invalid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/proxima_nova"
                android:textColor="@color/colorHighlight"
                android:textAlignment="textEnd"
                android:text="@string/lbl_invalid"
                android:visibility="invisible"/>
        </LinearLayout>

        <EditText
            android:id="@+id/get_started_signup_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="7dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="7dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:maxLines="1"
            android:hint=""
            android:inputType="textEmailAddress"
            android:background="@drawable/edittxt_style"
            android:textColor="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/proxima_nova"
                android:textColor="@color/colorPrimary"
                android:text="@string/lbl_username"/>

            <TextView
                android:id="@+id/get_started_signup_username_invalid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/proxima_nova"
                android:textColor="@color/colorHighlight"
                android:textAlignment="textEnd"
                android:text="@string/lbl_invalid"
                android:visibility="invisible"/>
        </LinearLayout>

        <EditText
            android:id="@+id/get_started_signup_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="7dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="7dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:maxLines="1"
            android:hint=""
            android:inputType="textPersonName"
            android:background="@drawable/edittxt_style"
            android:textColor="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/proxima_nova"
                android:textColor="@color/colorPrimary"
                android:text="@string/lbl_password"/>

            <TextView
                android:id="@+id/get_started_signup_password_invalid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:fontFamily="@font/proxima_nova"
                android:textColor="@color/colorHighlight"
                android:textAlignment="textEnd"
                android:text="@string/lbl_pass_short_warning"
                android:visibility="invisible"/>
        </LinearLayout>

        <EditText
            android:id="@+id/get_started_signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="7dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:paddingBottom="7dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:maxLines="1"
            android:hint=""
            android:inputType="textPassword"
            android:background="@drawable/edittxt_style"
            android:textColor="@color/colorPrimary"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/get_started_signup_login_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oswald"
                android:textStyle="bold"
                android:text="@string/lbl_back"
                android:textAllCaps="true"
                android:textColor="@android:color/black"
                android:layout_marginEnd="30dp"
                android:textSize="22sp"/>

            <Button
                android:id="@+id/get_started_signup_next_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oswald"
                android:textStyle="bold"
                android:text="@string/lbl_next"
                android:background="@drawable/button_style"
                android:textColor="@color/colorClear"
                android:paddingStart="50dp"
                android:paddingEnd="50dp"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>