<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:background="@color/colorCream"
        android:id="@+id/get_started_header">

        <TextView
            android:id="@+id/get_started_motto"
            android:layout_width="150dp"
            android:layout_height="180dp"
            android:layout_margin="30dp"
            android:gravity="center_vertical"
            android:textAlignment="gravity"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            android:textAllCaps="true"
            android:fontFamily="@font/oswald"
            android:text="@string/app_motto"/>

        <ImageView
            android:id="@+id/get_started_motto_logo"
            android:layout_width="261dp"
            android:layout_height="220dp"
            android:layout_marginBottom="4dp"
            android:src="@drawable/bg_runner"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@null" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="-50dp"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="-50dp"
            android:background="@drawable/tilted_rect"
            android:contentDescription="@null"/>
    </RelativeLayout>

    <ImageView
        android:id="@+id/get_started_logo"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/benefit_logo"
        android:contentDescription="@string/app_name"/>

    <View
        android:id="@+id/get_started_divider"
        android:layout_width="205dp"
        android:layout_alignBottom="@id/get_started_logo"
        android:layout_centerHorizontal="true"
        android:layout_height="1dp"
        android:background="@color/colorGrey"/>

    <TextView
        android:id="@+id/get_started_begin_lbl"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_alignTop="@id/get_started_divider"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:textSize="17sp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/proxima_nova"
        android:text="@string/get_started_begin"/>

    <View
        android:layout_width="205dp"
        android:layout_alignBottom="@id/get_started_begin_lbl"
        android:layout_centerHorizontal="true"
        android:layout_height="1dp"
        android:background="@color/colorGrey"/>

    <Button
        android:id="@+id/get_started_startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/oswald"
        android:textStyle="bold"
        android:text="@string/get_started_btn"
        android:background="@drawable/button_style"
        android:textColor="@color/colorClear"
        android:paddingStart="50dp"
        android:paddingEnd="50dp"
        android:layout_marginBottom="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>