<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:fontFamily="@font/proxima_nova"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:text="Forget Password"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#a7a7a7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/proxima_nova"
        android:textColor="@color/colorGrey"
        android:text="To reset your password, type the email address you use to login."
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:fontFamily="@font/proxima_nova"
            android:textColor="@color/colorPrimary"
            android:text="@string/lbl_email"/>

        <TextView
            android:id="@+id/dialog_email_invalid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:fontFamily="@font/proxima_nova"
            android:textColor="@color/colorHighlight"
            android:textAlignment="textEnd"
            android:text="@string/lbl_invalid"
            android:visibility="invisible"/>
    </LinearLayout>

    <EditText
        android:id="@+id/dialog_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:paddingBottom="5dp"
        android:hint=""
        android:background="@drawable/edittxt_style"
        android:textColor="@color/colorPrimary"
        android:inputType="textPassword"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="30dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#a7a7a7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/proxima_nova"
            android:textStyle="bold"
            android:text="@string/lbl_cancel"
            android:background="@drawable/button_style_white"
            android:textColor="@color/colorGrey"
            android:textAllCaps="false"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"/>
        <Button
            android:id="@+id/dialog_accept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/proxima_nova"
            android:textStyle="bold"
            android:text="@string/lbl_ok"
            android:background="@drawable/button_style_grey"
            android:textColor="@color/colorClear"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"/>
    </LinearLayout>
</LinearLayout>